--- a/assets/sass/_search.scss
+++ b/assets/sass/_search.scss
@@ -1,8 +1,9 @@
 .search{
     background: $secondaryBackground;
     border-radius: 5px;
-    width: 100%;
+    width: 90%;
     height: 69px;
+    margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -30,10 +31,15 @@
 }
 .search--icon{
     border:0;
-    background-color: green;
+    background-color: transparent;
     width: 32px;
     height: 32px;
     margin-right: 5px;
     box-sizing: border-box;
     z-index:11;
 }
+@media screen and (min-width: 1240px){
+    .search{
+      width: 100%;
+    }
+  }
