--- a/assets/sass/_tags.scss
+++ b/assets/sass/_tags.scss
@@ -1,10 +1,3 @@
-.tags{
-    margin-top: 20px;
-    width: 100%;
-    height: auto;
-    display: flex;
-}
-
 .tag{
     min-width: auto;
     max-width: 200px;
@@ -21,8 +14,23 @@
     & span{
     margin-right: 10px;
     }
-}
-
-.hidden{
-    display: none;
+    &__principal{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+    &__secondaire{
+        width: 100%;
+        height: auto;
+        display: flex;
+        box-sizing: border-box;
+        flex-wrap: wrap;
+    }
+    &s{
+        width:auto;
+        height: auto;
+        display: flex;
+        margin-top: 20px;
+    }
 }
